Thesis progress. Answers are saved

--- a/Tesis/intro.tex
+++ b/Tesis/intro.tex
@@ -8,7 +8,7 @@ El objetivo de esta investigación de tesis es determinar si se ven diferencias 
 
 El público objetivo son estudiantes que estén en su primer año de ciencias de la computación (CS por sus siglas en inglés), aunque también es aplicable a estudiantes de otras carreras relacionadas a ingeniería que sepan de programación. El requisito principal es que no hayan aprendido de grafos todavía.
 
-
+    
 \section{Motivación}
 
 El uso de tecnologías digitales ha permitido acelerar el acceso al conocimiento y su escabilidad, permitiendo que estudiantes que habrían sido excluidos en otros contextos, ahora puedan acceder a la educación. Sin embargo, la educación en línea tiene sus propios retos \cite{UN2023ImpactDigitalTechnologies}. En este contexto, se vuelve importante buscar metodologías que permitan acelerar el aprendizaje de los estudiantes con tecnologías adaptables, escalables, y que permitan un aprendizaje más eficiente.
@@ -22,7 +22,7 @@ Una forma de distracción reconocida en la literatura es la interferencia motiva
 
 Los videjuegos educativos destacan porque tienen potencial como una herramienta complementaria para la enseñanza, evaluación y entretemiento para los estudiantes. Entre sus beneficios se destaca la motivación. En \cite{Bisson1996FunInLEarningPedagogicalRole} se indica que para disfrutar una actividad, primero se debe permitir a la mente de un individuo percibir tal actividad como motivante. 
 
-En \cite{Yu2020TheEffectsOfEducationGames}, Yu hace una revisión sistemática de la literatura sobre los efectos de los videojuegos educativos en el aprendizaje de los estudiantes y su motivación. En este estudio, relativo a la motivación, se señala que en un contexto de aprendizaje que utilice o se complemente con videojuegos educativos afecta positivamente la motivación e incluso los logros académicos, pero también señala que han habido estudios que contradicen esta afirmación, por lo que se requiere más investigación en el área. 
+Yu hace una revisión sistemática de la literatura \cite{Yu2020TheEffectsOfEducationGames} sobre los efectos de los videojuegos educativos en el aprendizaje de los estudiantes y su motivación. En este estudio, relativo a la motivación, se señala que en un contexto de aprendizaje que utilice o se complemente con videojuegos educativos afecta positivamente la motivación e incluso los logros académicos, pero también señala que han habido estudios que contradicen esta afirmación, por lo que se requiere más investigación en el área. 
 
 En el estudio mencionado, se asevera que el diseño del videojuego afecta totalmente el resultado final. Por ejemplo, los juegos de acción o realidad aumentada tenían mejores resultados que un juego tradicional, y que las mecánicas, elementos visuales y narrativos tienen un efecto significativo en el resultado final.
 
