--- a/Tesis/resultados.tex
+++ b/Tesis/resultados.tex
@@ -8,4 +8,9 @@ Las 15 personas que hicieron la prueba tuvieron ambas respuestas correctas, iden
 \subsection{Formulario MEEGA+: Percepción de usuario}
 
 % Hablar de la suma de puntaje y puntaje promedio para los dos casos: De fase exploratoria y fase posterior.
+Las respuestas al formulario se encuentran en: \href{https://docs.google.com/spreadsheets/d/1DlxUT5o-nRknYXGtFWqkXX2ZkuEZJZsow4DbW6bUTh8/edit?usp=sharing}{https://docs.google.com/spreadsheets/d/1DlxUT5o-nRknYXGtFWqkXX2ZkuEZJZsow4DbW6bUTh8/edit?usp=sharing}
+
+
+Debería poner aquí los gráficos o en un anexo?
+% Poner acá gráficos y demás
 
