Thesis progress. Send to professor for the first time. Answers saved and tabulated

--- a/Propuesta/proposal.tex
+++ b/Propuesta/proposal.tex
@@ -197,9 +197,8 @@ de un grupo de estudiantes de computación antes y después de probar el videoju
 
 Se desarrolla un videojuego considerando el feedback de un profesor guía y otros estudiantes
 que no sean parte de la población objetivo del estudio, ajustándolo según sea necesario. \\
-Asegurarse que el videojuego cumple con las características seguridas por autores que proponen
-metodologías para la evaluación de videojuegos educativos: Gibson et al. \cite{evaluation_of_games_for_teaching_cs},
-Petri, Giano y otros, \cite{petri2018method} y Kiili et al. \cite{using_videogames_maths}. Si no, seguir iterando. \\
+Asegurarse que el videojuego cumple con las características seguridas por autores que proponen metodologías para la evaluación de videojuegos educativos: Gibson et al. \cite{evaluation_of_games_for_teaching_cs},
+Petri, Giani y otros, \cite{petri2018method} y Kiili et al. \cite{using_videogames_maths}. Si no, seguir iterando. \\
 Cuando se haya impartido la materia relacionada a grafos y se hayan visto los algoritmos BFS y DFS, preguntarle a
 los alumnos si se creen capaces de programar tales algoritmos desde 0 y guardar estos resultados.
 Presentar el juego en los cursos cuando se esté impartiendo la materia relacionada a grafos. El uso del
