--- a/Propuesta/proposal_short.tex
+++ b/Propuesta/proposal_short.tex
@@ -67,13 +67,13 @@ evaluar al mismo tiempo. Además, caracterizaron estadísticamente las diferenci
 de videojuegos entre resultados de un pre test y un post test, concluyendo que existe una correlación positiva
 entre el uso de estos videojuegos y mejores resultados académicos en pruebas de matemáticas.
 
-Kiili y su equipo, Bell et al., Giani y otros \cite{petri2018method} están de acuerdo en que no hay sistematización en la evaluación de
-videojuegos educativos. En efecto, hay juegos serios que ni siquiera se denominan o consideran como tales
+Petri, Giani y otros \cite{petri2018method} están de acuerdo en que no hay sistematización en la evaluación de
+videojuegos educativos. En efecto, hay juegos serios que ni siquiera son considerados como tales
 \cite{evaluation_of_games_for_teaching_cs}. Por otra parte, no existe una forma estándar de evaluarlos, razón por
-la cual Petri, Giani y otros \cite{petri2018method} crearon el modelo MEEGA+ (Model for the Evaluation of Educational
+la cual Petri, et al. \cite{petri2018method} impulsaron el modelo MEEGA+ (Model for the Evaluation of Educational
 Games and EGameFlow scale).
 
-Entre las faltas mencionadas al momento de crear videojuegos, se mencionan las faltas de 1) Definición de un objetivo
+Entre las faltas mencionadas al momento de crear videojuegos educativos, se destacan: 1) Definición de un objetivo
 de evaluación; 2) Diseño de investigación; 3) Programa de medición; 4) Instrumentos de recolección de datos y 5) Métodos
 de análisis de datos. Un ejemplo de falta de sistematización: una práctica común al analizar estas herramientas son los 
 comentarios informales por parte del estudiantado \cite{petri2018method}.
