--- a/Tesis/anexoA.tex
+++ b/Tesis/anexoA.tex
@@ -1,8 +1,12 @@
 \chapter{Anexo A: Formulario basado en MEEGA+} \label{AnexoA}
 
+\newgeometry{margin=0.5in}
 
-\begin{table}[]
+\begin{table}[h]
+\centering
+\caption{Formulario basado en MEEGA+. Se eliminó la dimensión social y no se incluyeron los ítems que preguntan por los objetivos particulares del juego.}
 \label{TablaFormularioMEEGA}
+
 \begin{tabular}{|c|l|} % borde | columna fuente centrada | borde | columna fuente a la izq | 
 \hline % Linea horizontal inicial
 \textbf{Notación} & \textbf{Pregunta} \\\hline % Separa el inicio
@@ -33,7 +37,9 @@ Q24      & Este juego es adecuado para enseñar el contenido \\
 Q25      & Prefiero aprender con este juego en vez de aprender con otros métodos de enseñanza \\
 Q26      & El juego contribuyó a mi aprendizaje \\
 Q27      & El juego me permitió aprender de forma eficiente en comparación con otras actividades \\
+& \\
 \hline
-\caption{Formulario basado en MEEGA+. Se eliminó la dimensión social y no se incluyeron los ítems que preguntan por los objetivos particulares del juego.}
 \end{tabular}
 \end{table}
+
+\restoregeometry
