--- a/Tesis/anexoD.tex
+++ b/Tesis/anexoD.tex
@@ -1,3 +1,19 @@
 \chapter{Anexo D: Aprobación de Comité de Ética}\label{AnexoD}
 % Poner aquí el PDF del comité de ética
 
+Revisar siguiente página. Esta aprobación se dio como respuesta a una solicitud para realizar un trabajo de título con personas, para asegurarse que se enmarcara dentro del marco ético establecido por la facultad.
+
+\newgeometry{margin=0.0in} % Eliminamos bordes temporalmente
+
+% Páginas 1 y 2 en dstintas páginas
+\begin{figure}[h]
+   \centering
+   \fbox{\includegraphics[page=1, width=0.9\textwidth]{imagenes/ComiteEticaFirmado.pdf}}
+\end{figure}
+
+\begin{figure}[h]
+   \centering
+   \fbox{\includegraphics[page=2, width=0.9\textwidth]{imagenes/ComiteEticaFirmado.pdf}}
+\end{figure}
+
+\restoregeometry
