--- a/Tesis/discusion.tex
+++ b/Tesis/discusion.tex
@@ -15,6 +15,10 @@
 
 \section{Fortalezas de la metodología aplicada}
 
+La principal fortaleza de la metodología aplicada es que se basa en un formulario estandarizado y ya probado. Existe una confianza alta en que el formulario mide lo que efectivamente busca medir, lo cual se validó a través de la delta de Cronbach \cite{meegaplus}.
+
+El proceso de diseño también se considera robusto, pues incorporó retroalimentación por parte de expertos y la utilización de la metodología de Loud Thinking en cada iteración, lo que permitió que los jugadores pudieran desenvolverse correctamente en el juego y finalmente responder la prueba escrita.
+
 
 
 \section{Debilidades y mejoras para la metodología aplicada}
@@ -23,12 +27,12 @@ Una debilidad identificada es que la prueba académica falló en detectar difere
 
 El trabajo hecho no mide una componente social asociada al videojuego. Esta se descartó por dificultades en la aplicación de las pruebas de usuario y porque era difícil implementar a nivel de diseño una componente social en el videojuego que esté justificada desde el punto de vista del usuario. El modelo MEEGA+ \cite{meegaplus} busca evaluar también una componente social.
 
-No se puede asegurar la heterogeneidad de la muestra. De partida, existe el sesgo del voluntario. El sesgo del voluntario afecta de acuerdo a \cite{}. Lo ideal, sería hacer una separación aleatoria en los cursos. % CITAR TODO
-Por otra parte, existe el sesgo de novedad. % CITAR
+No se puede asegurar la heterogeneidad de la muestra. De partida, existe el sesgo del voluntario. El sesgo del voluntario afecta de acuerdo a \cite{volunterBias}. El caso ideal consiste en hacer una separación aleatoria en los cursos como parte de las actividades de la clase. Sin embargo, es probable que aún así existan sesgos en los cursos por la simple selección de estudiantes de carreras asociadas a computación o informática. % CITAR TODO
+%  Por otra parte, existe el sesgo de novedad. % CITAR
 
-Además, autores como %CITAR LIBRO WILEY% mencionan que es mejor hacer una prueba dos semanas después para medir aprendizajes. Sin embargo, esto era difícil de realizar dadas las condiciones del trabajo, puesto que fue difícil conseguir voluntarios en un contexto donde los estudiantes prefieren dedicar su tiempo a preparar exámenes en vez de participar en una actividad universitaria.
+Además, autores como mencionan que es mejor hacer una prueba dos semanas después para medir aprendizajes. Sin embargo, esto era difícil de realizar dadas las condiciones del trabajo, puesto que fue difícil conseguir voluntarios en un contexto donde los estudiantes prefieren dedicar su tiempo a preparar exámenes en vez de participar en una actividad universitaria \cite{Rogers2002InteractionDB}.
 
-Por otra parte, el autor de este trabajo no es un diseñador de videojuegos y su principal énfasis está en la programación. Se destaca el rol y la importancia del diseño del videojuego. Este tiene que ser atractivo, interesante y ofrecer más mecánicas que recompensen al jugador, como agregarle una dimensión social a través de un ranking, componentes cooperativas o competitivas. La narrativa tampoco es acabada, no es una historia que lleve un fin y no se presenta un desarrollo de personaje. Tampoco se presenta un antagonista.
+Por otra parte, el autor de este trabajo no es un diseñador de videojuegos y su principal énfasis está en la programación. Se destaca el rol y la importancia del diseño del videojuego. Este tiene que ser llamativo y ofrecer mecánicas que recompensen al jugador, así como agregarle una dimensión social a través de un ranking, componentes cooperativas o competitivas. La narrativa tampoco es acabada, no es una historia que lleve un fin y no se presenta un desarrollo de personaje, tampoco se presenta un antagonista. Este tipo de elementos despiertan más el interés del jugador.
 
 \section{Trabajo futuro}
 
