--- a/Tesis/diseno_y_requisitos.tex
+++ b/Tesis/diseno_y_requisitos.tex
@@ -63,14 +63,9 @@ Terminados los niveles BFS y DFS, se mostrarán los créditos.
 \subsection{Narrativa}
 
 La historia se sitúa en el espacio exterior. Se muestra una nave en un inicio sosteniendo un diálogo con una estación llamada DCC.
-La nave está rescatando pandas rojos que están esparcidos en los planetas de la galaxia. El piloto indica 
-que los niveles de combustible están bajos, a lo cual la estación le indica que debería seguir con las siguientes
-galaxias, pero sin utilizar el pilóto automático, pues las redes neuronales que utilizadas son muy costosas y consumen 
-mucho combustible, razón por la cual la nave deberá seguir las instrucciones manuales que le indicarán.
+La nave está rescatando pandas rojos que están esparcidos en los planetas de la galaxia. El piloto indica que los niveles de combustible están bajos, a lo cual la estación le indica que debería seguir con las siguientes galaxias, pero sin utilizar el pilóto automático, pues las redes neuronales que utilizadas son costosas y consumen combustible. A fin de ahorrar recursos, la nave deberá seguir instrucciones manuales para completar su misión.
 
-Con cada galaxia visitada, el piloto rescata y encuentra otros pandas rojos. De esta manera se premia al jugador para
-que siga con los siguientes niveles y que termine el juego. Los pandas rojos son la mascota del Centro de Alumnos del Departamento de Ciencias 
-de la Computación (CADCC). Cuando se realizan actividades de bienvenida a los nuevos estudiantes, se muestran afiches con esta mascota \cite{CADCCPage}, por lo que se busca que el jugador se sienta identificado con el juego. Además, la estación se llama DCC para aumentar el sentido de identificación con el jugador, pues DCC son las siglas del Departamento de Ciencias de la Computación \cite{DCCPage}.
+Con cada galaxia visitada, el piloto rescata y encuentra otros pandas rojos. Se premia al jugador para que siga con los siguientes niveles y que termine el juego. Los pandas rojos son la mascota del Centro de Alumnos del Departamento de Ciencias  de la Computación (CADCC). Cuando se realizan actividades de bienvenida a los nuevos estudiantes, se muestran afiches con esta mascota \cite{CADCCPage}, por lo que se busca que el jugador se sienta identificado con el juego. Además, la estación se llama DCC para aumentar el sentido de identificación con el jugador, pues DCC son las siglas del Departamento de Ciencias de la Computación \cite{DCCPage}.
 
 
 \subsection{Menú principal}
@@ -88,7 +83,7 @@ El menú principal permite seleccionar idioma apretando el botón en la esquina 
 \subsection{Tutoriales}
 
 Los tutoriales buscan enseñarle al jugador las mecánicas básicas que serán utilizadas durante le resto del juego. Además, introducen al jugador a la historia, situada en una nave que está rescatando Pandas Rojos esparcidos en los planetas de la galaxia. La historia de fondo busca mostrar una aplicación de los grafos sin explicitar qué contenido se está enseñando.
-Las mecánicas se enseñan con una combinación de elementos, entre texto y hints visuales, como un mouse haciendo click izquierdo o una tecla R siendo presionada sobre el planeta.
+Las mecánicas se enseñan a través de una combinación de elementos, entre texto y hints visuales, como un mouse haciendo click izquierdo o una tecla R siendo presionada sobre el planeta.
 Cada nivel y tutorial es repetible para que el jugador pueda volver a probarlo en caso de no haber entendido algo.
 
 \subsubsection{Primer Tutorial}
@@ -131,7 +126,7 @@ Durante este segundo tutorial se introduce la lógica de responder sí o no cuan
 
 \subsubsection{Tercer tutorial}
 
-El tercer tutorial introduce al jugador el concepto de Pilas (Stacks) y Colas (Queues) como estructuras de datos para almacenar nodos y luego obtenerlos en órdenes distintos. Además, se le introduce al jugador sobre las variables creadas y la variable seleccionada. La variable seleccionada se usa para señalar a qué objeto se le agregará el nodo que el usuario presione.
+El tercer tutorial introduce al jugador el concepto de Pilas (Stacks) y Colas (Queues) como estructuras de datos para almacenar nodos y luego obtenerlos en órdenes distintos. Además, se le introduce al jugador sobre las variables creadas y la variable seleccionada, la cuak se se usa para señalar a qué objeto se le agregará el nodo que el usuario presione.
 
 \begin{figure}[h]
 	\centering
