--- a/Tesis/trabajo_relacionado.tex
+++ b/Tesis/trabajo_relacionado.tex
@@ -13,9 +13,9 @@ En el trabajo realizado por Zhao y Shute \cite{video_game_foster_computational_t
 
 Sin embargo, el impacto de estos videojuegos no ha sido evaluado en muchos casos. En los casos documentados, se cuenta con muestras pequeñas, además de que se trata principalmente de evaluaciones puramente cualitativas \cite{video_game_foster_computational_thinking}, \cite{effectiveness_gbl}.
 
-Kiili y su equipo, Bell et al., Giani y otros \cite{petri2018method} están de acuerdo en que no hay sistematización en la evaluación de videojuegos educativos. En efecto, hay juegos serios que ni siquiera se denominan o consideran como tales \cite{evaluation_of_games_for_teaching_cs}. Por otra parte, no existe una forma estándar de evaluarlos, razón por la cual Petri, Giani y otros \cite{petri2018method} crearon el modelo MEEGA+ (Model for the Evaluation of Educational Games and EGameFlow scale).
+Petri y otros \cite{meegaplus} están de acuerdo en que no hay sistematización en la evaluación de videojuegos educativos. En efecto, hay juegos serios que ni siquiera se denominan o consideran como tales \cite{evaluation_of_games_for_teaching_cs}. Por otra parte, no existe una forma estándar de evaluarlos, razón por la cual Petri et al. \cite{meegaplus} crearon el modelo MEEGA+ (Model for the Evaluation of Educational Games and EGameFlow scale).
 
-Entre las faltas mencionadas al momento de crear videojuegos, se mencionan las faltas de 1) Definición de un objetivo de evaluación; 2) Diseño de investigación; 3) Programa de medición; 4) Instrumentos de recolección de datos y 5) Métodos de análisis de datos. Un ejemplo de falta de sistematización: una práctica común al analizar estas herramientas son los comentarios informales por parte del estudiantado \cite{petri2018method}.
+Entre las faltas mencionadas al momento de crear videojuegos, se mencionan las faltas de 1) Definición de un objetivo de evaluación; 2) Diseño de investigación; 3) Programa de medición; 4) Instrumentos de recolección de datos y 5) Métodos de análisis de datos. Un ejemplo de falta de sistematización: una práctica común al analizar estas herramientas son los comentarios informales por parte del estudiantado \cite{meegaplus}.
 
 
 
