--- a/Tesis/bibliografia.bib
+++ b/Tesis/bibliografia.bib
@@ -251,3 +251,131 @@ DOI = {10.3390/educsci9040276}
   pages={1--47},
   year={2018}
 }
+
+@inproceedings{evaluation_of_games_for_teaching_cs,
+  title={Evaluation of games for teaching computer science},
+  author={Gibson, Ben and Bell, Tim},
+  booktitle={Proceedings of the 8th Workshop in Primary and Secondary Computing Education},
+  pages={51--60},
+  year={2013}
+}
+
+@article{using_videogames_maths,
+  title={Using video games to combine learning and assessment in mathematics education},
+  author={Kiili, Kristian and Devlin, Keith and Perttula, Arttu and Tuomi, Pauliina and Lindstedt, Antero},
+  journal={International Journal of Serious Games},
+  volume={2},
+  number={4},
+  pages={37--55},
+  year={2015}
+}
+
+@article{video_game_foster_computational_thinking,
+  title={Can playing a video game foster computational thinking skills?},
+  author={Zhao, Weinan and Shute, Valerie J},
+  journal={Computers \& Education},
+  volume={141},
+  pages={103633},
+  year={2019},
+  publisher={Elsevier}
+}
+
+
+@article{wuscastle,
+  title={Experimental evaluation of an educational game for improved learning in introductory computing},
+  author={Eagle, Michael and Barnes, Tiffany},
+  journal={ACM SIGCSE Bulletin},
+  volume={41},
+  number={1},
+  pages={321--325},
+  year={2009},
+  publisher={ACM New York, NY, USA}
+}
+
+
+ @misc{CodeCombat,
+  title={CodeCombat: Coding games to learn python and JavaScript}, 
+  howpublished = {\url{https://www.codecombat.com/}}, 
+  journal={CodeCombat}, 
+  publisher={CodeCombat}, 
+  note = {Accessed: 2022-May-20}
+} 
+
+@inproceedings{codespells,
+  title={CodeSpells: bridging educational language features with industry-standard languages},
+  author={Esper, Sarah and Foster, Stephen R and Griswold, William G and Herrera, Carlos and Snyder, Wyatt},
+  booktitle={Proceedings of the 14th Koli calling international conference on computing education research},
+  pages={05--14},
+  year={2014}
+}
+
+@inproceedings{minicolon,
+  title={MiniColon; teaching kids computational thinking using an interactive serious game},
+  author={Ayman, Reham and Sharaf, Nada and Ahmed, Ghada and Abdennadher, Slim},
+  booktitle={Joint International Conference on Serious Games},
+  pages={79--90},
+  year={2018},
+  organization={Springer}
+}
+
+
+@article{maloney2010scratch,
+  title={The scratch programming language and environment},
+  author={Maloney, John and Resnick, Mitchel and Rusk, Natalie and Silverman, Brian and Eastmond, Evelyn},
+  journal={ACM Transactions on Computing Education (TOCE)},
+  volume={10},
+  number={4},
+  pages={1--15},
+  year={2010},
+  publisher={ACM New York, NY, USA}
+}
+
+@misc{scratch,
+  title={Scratch: Learn Programming with blocks}, 
+  howpublished = {\url{https://scratch.mit.edu/}}, 
+  publisher={MIT}, 
+  note = {Accessed: 2022-May-20}
+} 
+
+@inproceedings{LightBot,
+  author={Gouws, Lindsey Ann and Bradshaw, Karen and Wentworth, Peter},
+  title={Computational thinking in educational activities: an evaluation of the educational game light-bot},
+  booktitle={Proceedings of the 18th ACM conference on Innovation and technology in computer science education},
+  pages={10--15},
+  year={2013}
+}
+
+@inproceedings{RoboBuilder,
+  title={RoboBuilder: A program-to-play constructionist video game},
+  author={Weintrop, David and Wilensky, Uri},
+  booktitle={Proceedings of the constructionism 2012 conference. Athens, Greece},
+  year={2012}
+}
+
+@article{effectiveness_gbl,
+  title={A pilot study on the effectiveness and acceptance of an educational game for teaching programming concepts to primary school students},
+  author={Giannakoulas, Andreas and Xinogalos, Stelios},
+  journal={Education and Information Technologies},
+  volume={23},
+  number={5},
+  pages={2029--2052},
+  year={2018},
+  publisher={Springer}
+}
+
+@inproceedings{Rogers2002InteractionDB,
+  title={Interaction Design: Beyond Human-Computer Interaction},
+  author={Yvonne Rogers and Helen Sharp and Jennifer Preece},
+  year={2002},
+  url={https://api.semanticscholar.org/CorpusID:61037268}
+}
+
+@article{volunterBias,
+  title={Volunteer Effects on Experimental Outcomes},
+  author={Ralph L. Rosnow and Robert Rosenthal and Roberta M. Mcconochie and Robert L. Arms},
+  journal={Educational and Psychological Measurement},
+  year={1969},
+  volume={29},
+  pages={825 - 846},
+  url={https://api.semanticscholar.org/CorpusID:144923020}
+}
