Fixed questions according to manual and not paper

--- a/Tesis/resultados.tex
+++ b/Tesis/resultados.tex
@@ -8,9 +8,15 @@ Las 15 personas que hicieron la prueba tuvieron ambas respuestas correctas, iden
 \subsection{Formulario MEEGA+: Percepción de usuario}
 
 % Hablar de la suma de puntaje y puntaje promedio para los dos casos: De fase exploratoria y fase posterior.
-Las respuestas al formulario se encuentran en: \href{https://docs.google.com/spreadsheets/d/1DlxUT5o-nRknYXGtFWqkXX2ZkuEZJZsow4DbW6bUTh8/edit?usp=sharing}{https://docs.google.com/spreadsheets/d/1DlxUT5o-nRknYXGtFWqkXX2ZkuEZJZsow4DbW6bUTh8/edit?usp=sharing}
-
-
-Debería poner aquí los gráficos o en un anexo?
 % Poner acá gráficos y demás
+Según \cite{meegaplus} un set de respuestas de un individuo se considera correcto y válido cuando tiene más del 85\% de las preguntas contestadas. En este caso no hubo omisiones.
+
+En la figura \ref{RespuestasAgregadas} se muestran los resultados agregados para cada pregunta en cada categoría. Las preguntas se acortaron con acrónimos, pero la indexación está disponible en el anexo: 
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=.5]{imagenes/answers.png}
+	\caption{Agregación de respuestas por categoría y por pregunta}
+	\label{RespuestasAgregadas}
+\end{figure}
 
